--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">Główna<span class="sr-only">(current)</span></a></li>
 					<li><a href="nadcisnienie.html">Nadciśnienie</a></li>
-					<li><a href="mapa.html" target="_blank">Jak dojechać</a></li>
+					<li><a href="mapa.html">Jak dojechać</a></li>
 				</ul>
 			</div>
 			</div>
@@ -92,6 +92,9 @@
 					</div>
 				</div>
 			</section>
+			<footer>
+				Created by Krystian Skoczeń &copy; 2018 <a class="site" href="http://werkris.pl">www.werkris.pl</a>
+			</footer>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js">
 		</script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
