--- a/mapa.html
+++ b/mapa.html
@@ -89,6 +89,9 @@
 					</div>
 				</div>
 			</section>
+			<footer>
+				Created by Krystian Skoczeń &copy; 2018 <a class="site" href="http://werkris.pl">www.werkris.pl</a>
+			</footer>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js">
 		</script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
