--- a/nadcisnienie.html
+++ b/nadcisnienie.html
@@ -153,6 +153,9 @@
 				</div>
 			</section>
 		</section>
+		<footer>
+			Created by Krystian Skoczeń &copy; 2018 <a class="site" href="http://werkris.pl">www.werkris.pl</a>
+		</footer>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js">
 		</script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
